2006-01-23  Andre Klapper <a9016009@gmx.de>

	* gui/e-day-view-time-item.c: added translator comment
	to a string. Fixes bug 328006.

2006-01-23  Andre Klapper <a9016009@gmx.de>

	* gui/print.c: added translator comments to workday
	abbreviations. Fixes bug 328007.

2006-01-23  Pavithran <pavithran@gmx.de>

	** Fixes bug #327713 , #327730
	
	* gui/dialogs/event-editor.c: (event_editor_construct):
	* gui/dialogs/task-editor.c: (task_editor_construct):
	Removes extra seperator. 
	
2006-01-23  Irene Huang <Irene.Huang@sun.com>

	Fixes #327958

	* gui/e-calendar-view.c: (e_calendar_view_get_tooltips):
	Check if ptr==NULL, for special occassion with SunOne 
	accouts.

2006-01-16  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #326478
	* gui/dialogs/cal-prefs-dialog.c: (spec_from_picker),
	(tasks_due_today_set_color), (tasks_overdue_set_color),
	(set_color_picker):
	* gui/dialogs/cal-prefs-dialog.glade: Changed the gtk color
	button to gnome color picker.

2006-01-20  Andre Klapper <a9016009@gmx.de>
	* gui/dialogs/task-page.c (field_changed_cb):
	Removed wrong parameter to be able compile again.

2006-01-17  Johnny Jacob <johnnyjacob@gmail.com>

	* gui/dialogs/event-page.c (edit_button_cb): Added.
	edit the selected attendee.
	(sensitize_widgets): enable/disable edit button and 
	Attendee list view.
	(button_press_event): don't popup the menu if editing is
	disabled.
	(get_widgets): get and connect signals for edit button

2006-01-19  Johnny Jacob  <johnnyjacob@gmail.com>

	Fixes #327487
	* gui/dialogs/cal-prefs-dialog.c (default_reminder_units_changed),
	(time_divisions_changed), (week_start_day_changed) : Use 
	e_dialog_combo_box functions to access the widgets.
	(default_reminder_interval_changed): Hack to update the spin
	 button value

2006-01-19  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #327293
	* gui/dialogs/event-editor.c: (window_delete_event),
	(event_editor_construct): handle delete event to just
	hide the window.
