@@ -1,3 +1,9 @@
+2006-01-24  Andre Klapper <a9016009@gmx.de>
+
+	* gui/dialogs/meeting-page.c: removed surrounding
+	markup. Fixes bug 313120. Committing on behalf of
+	Pablo Arroyo.
+
 2006-01-23  Andre Klapper <a9016009@gmx.de>
 
 	* gui/e-day-view-time-item.c: added translator comment
